[gd_scene load_steps=23 format=3 uid="uid://brvyvpi3ib3lm"]

[ext_resource type="Texture2D" uid="uid://bj126lredc2an" path="res://assets/backgrounds/galleryImage.png" id="1_lg6hf"]
[ext_resource type="PackedScene" uid="uid://cfmcelubuiv0b" path="res://scenes/sprites/player.tscn" id="2_6rhrw"]
[ext_resource type="Texture2D" uid="uid://b2dphgd5tyyx1" path="res://assets/backgrounds/artwork.png" id="2_u7mkv"]
[ext_resource type="Script" uid="uid://catxxo878j7na" path="res://scenes/scene_controller.gd" id="3_8naax"]
[ext_resource type="AudioStream" uid="uid://3ca3x3mb1rnx" path="res://assets/sounds/soundEffects/walking.mp3" id="3_r0fv4"]
[ext_resource type="FontFile" uid="uid://b3esi7yukr5pn" path="res://assets/fonts/Papernotes.ttf" id="4_543d2"]
[ext_resource type="FontFile" uid="uid://bipivipms5d56" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="4_mdy1u"]
[ext_resource type="AudioStream" uid="uid://b8bhb6sycm6o2" path="res://assets/sounds/backgroundMusic/sunset-cafe-jazz-238475.mp3" id="6_dsqju"]
[ext_resource type="PackedScene" uid="uid://c4b5fx6d3uvol" path="res://scenes/menus/options_menu.tscn" id="7_mkcid"]
[ext_resource type="PackedScene" uid="uid://0dgk5parxhih" path="res://scenes/menus/leaderboard.tscn" id="10_fdfcg"]
[ext_resource type="Texture2D" uid="uid://dpruuitebwlux" path="res://assets/other/icons8-trophy-40.png" id="10_mtg1g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u7mkv"]
bg_color = Color(0.623529, 0.388235, 0.129412, 1)
shadow_color = Color(0.473976, 0.473976, 0.473976, 0.6)
shadow_size = 3
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u7mkv"]
texture = ExtResource("2_u7mkv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fgpkw"]
texture = ExtResource("2_u7mkv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fdfcg"]
texture = ExtResource("2_u7mkv")
modulate_color = Color(0.791999, 0.791999, 0.791999, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mtg1g"]
texture = ExtResource("2_u7mkv")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_543d2"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_detail = 5
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="LabelSettings" id="LabelSettings_543d2"]
font = ExtResource("4_mdy1u")
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8naax"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mdy1u"]
draw_center = false
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dsqju"]
bg_color = Color(0.735969, 0.273693, 2.88785e-07, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mkcid"]
bg_color = Color(0.735969, 0.273693, 2.88785e-07, 1)
draw_center = false
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="Gallery" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 905.0
offset_bottom = 509.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.56, 0.56)
texture = ExtResource("1_lg6hf")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 362.0
offset_top = 53.0
offset_right = 814.0
offset_bottom = 345.0
theme_override_styles/disabled = SubResource("StyleBoxFlat_u7mkv")
disabled = true

[node name="artButton" type="Button" parent="."]
layout_mode = 0
offset_left = 374.0
offset_top = 65.0
offset_right = 803.0
offset_bottom = 333.0
theme_override_styles/focus = SubResource("StyleBoxTexture_u7mkv")
theme_override_styles/disabled = SubResource("StyleBoxTexture_fgpkw")
theme_override_styles/hover = SubResource("StyleBoxTexture_fdfcg")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mtg1g")
theme_override_styles/normal = SubResource("StyleBoxTexture_fgpkw")

[node name="player" parent="." instance=ExtResource("2_6rhrw")]
position = Vector2(-65, 487)
scale = Vector2(2.66129, 2.66129)
script = null

[node name="footstepSFX2" type="AudioStreamPlayer2D" parent="player"]
stream = ExtResource("3_r0fv4")
volume_db = -5.0
bus = &"SFX"

[node name="SceneController" type="Node" parent="."]
script = ExtResource("3_8naax")

[node name="UI" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="UI"]
layout_mode = 0
offset_left = 322.0
offset_top = 373.0
offset_right = 362.0
offset_bottom = 396.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_543d2")
label_settings = SubResource("LabelSettings_543d2")

[node name="Choices" type="HBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 491.0
offset_top = 450.0
offset_right = 746.0
offset_bottom = 490.0
theme_override_constants/separation = 30

[node name="Choice1" type="Button" parent="UI/Choices"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(2.64719e-07, 0.319035, 0.168904, 1)
theme_override_colors/font_color = Color(0, 0.317647, 0.168627, 1)
theme_override_colors/font_focus_color = Color(0, 0.317647, 0.168627, 1)
theme_override_colors/font_pressed_color = Color(0, 0.317647, 0.168627, 1)
theme_override_fonts/font = ExtResource("4_543d2")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_8naax")
theme_override_styles/hover = SubResource("StyleBoxFlat_mdy1u")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dsqju")
theme_override_styles/normal = SubResource("StyleBoxFlat_mkcid")
text = "Let's go!"

[node name="Choice2" type="Button" parent="UI/Choices"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(2.64719e-07, 0.319035, 0.168904, 1)
theme_override_colors/font_color = Color(0, 0.317647, 0.168627, 1)
theme_override_colors/font_focus_color = Color(0, 0.317647, 0.168627, 1)
theme_override_colors/font_pressed_color = Color(0, 0.317647, 0.168627, 1)
theme_override_fonts/font = ExtResource("4_543d2")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_8naax")
theme_override_styles/hover = SubResource("StyleBoxFlat_mdy1u")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dsqju")
theme_override_styles/normal = SubResource("StyleBoxFlat_mkcid")
text = "I think i'll stay..."

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_dsqju")
volume_db = -11.277
autoplay = true
bus = &"Music"

[node name="OptionsMenu" parent="." instance=ExtResource("7_mkcid")]
layout_mode = 1

[node name="leaderboardButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -551.0
offset_top = 257.0
offset_right = -507.0
offset_bottom = 299.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_543d2")
theme_override_font_sizes/font_size = 20
icon = ExtResource("10_mtg1g")

[node name="Leaderboard" parent="." instance=ExtResource("10_fdfcg")]
visible = false
layout_mode = 1

[connection signal="pressed" from="artButton" to="SceneController" method="_on_art_button_pressed"]
[connection signal="pressed" from="UI/Choices/Choice1" to="SceneController" method="_on_choice_1_pressed"]
[connection signal="pressed" from="UI/Choices/Choice2" to="SceneController" method="_on_choice_2_pressed"]
[connection signal="pressed" from="leaderboardButton" to="SceneController" method="_on_leaderboard_button_pressed"]
